[package]
name = "scx_rust_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
plain = "0.2.3"
ctrlc = { version = "3.1", features = ["termination"] }
libbpf-rs = "0.24.1"
libc = "0.2.137"
scx_utils = "1.0.3"
scx_rustland_core = "2.0"

[build-dependencies]
scx_utils = "1.0.3"
scx_rustland_core = "2.0"
